# notectl

./: CLAUDE.md  CLAUDE.md.bak  Cargo.toml  README.md  versions.json
src/: db.rs  display.rs  export.rs  main.rs  note.rs  search.rs  tags.rs  template.rs  todo.rs  utils.rs
