[package]
name = "notectl"
version = "0.1.0"
edition = "2021"
authors = ["Angel Samuel Suesca Ríos <suescapsam@gmail.com>"]
description = "Lightning-fast note-taking and task management CLI"
license = "MIT"
repository = "https://github.com/Samsuesca/notectl"

[[bin]]
name = "notectl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
tabled = "0.15"
dirs = "5"
toml = "0.8"
